--- a/fixtures/vcr_cassettes/Pubmed_Harvester/_process_author/when_new_publications.yml
+++ b/fixtures/vcr_cassettes/Pubmed_Harvester/_process_author/when_new_publications.yml
@@ -2,269 +2,6 @@
 http_interactions:
 - request:
     method: post
-    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=a_fake_pubmed_key&db=pubmed&retmode=xml
-    body:
-      encoding: UTF-8
-      string: "&id=&id=30833575"
-    headers:
-      User-Agent:
-      - stanford-library-sul-pub
-      Accept:
-      - "*/*"
-      Accept-Encoding:
-      - gzip,deflate
-      Date:
-      - Fri, 22 Mar 2019 16:41:09 GMT
-      Content-Type:
-      - application/x-www-form-urlencoded
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Fri, 22 Mar 2019 16:41:10 GMT
-      Server:
-      - Finatra
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubDomains; preload
-      Content-Security-Policy:
-      - upgrade-insecure-requests
-      X-Ratelimit-Remaining:
-      - '9'
-      Ncbi-Phid:
-      - 939B06706F9C03E5000027E5EEB6A904.1.1.m_3
-      Cache-Control:
-      - private
-      L5d-Success-Class:
-      - '1.0'
-      Ncbi-Sid:
-      - B70C2D725EA90A62_A307SID
-      Content-Encoding:
-      - gzip
-      X-Ratelimit-Limit:
-      - '10'
-      Access-Control-Allow-Origin:
-      - "*"
-      Content-Type:
-      - text/xml; charset=UTF-8
-      Set-Cookie:
-      - ncbi_sid=B70C2D725EA90A62_A307SID; domain=.nih.gov; path=/; expires=Sun, 22
-        Mar 2020 16:41:10 GMT
-      X-Ua-Compatible:
-      - IE=Edge
-      X-Xss-Protection:
-      - 1; mode=block
-      Transfer-Encoding:
-      - chunked
-    body:
-      encoding: UTF-8
-      string: |-
-        <?xml version="1.0" ?>
-        <!DOCTYPE PubmedArticleSet PUBLIC "-//NLM//DTD PubMedArticle, 1st January 2019//EN" "https://dtd.nlm.nih.gov/ncbi/pubmed/out/pubmed_190101.dtd">
-        <PubmedArticleSet>
-        <PubmedArticle>
-            <MedlineCitation Status="In-Data-Review" Owner="NLM">
-                <PMID Version="1">30833575</PMID>
-                <DateRevised>
-                    <Year>2019</Year>
-                    <Month>03</Month>
-                    <Day>08</Day>
-                </DateRevised>
-                <Article PubModel="Electronic">
-                    <Journal>
-                        <ISSN IssnType="Electronic">2041-1723</ISSN>
-                        <JournalIssue CitedMedium="Internet">
-                            <Volume>10</Volume>
-                            <Issue>1</Issue>
-                            <PubDate>
-                                <Year>2019</Year>
-                                <Month>Mar</Month>
-                                <Day>04</Day>
-                            </PubDate>
-                        </JournalIssue>
-                        <Title>Nature communications</Title>
-                        <ISOAbbreviation>Nat Commun</ISOAbbreviation>
-                    </Journal>
-                    <ArticleTitle>Pocket similarity identifies selective estrogen receptor modulators as microtubule modulators at the taxane site.</ArticleTitle>
-                    <Pagination>
-                        <MedlinePgn>1033</MedlinePgn>
-                    </Pagination>
-                    <ELocationID EIdType="doi" ValidYN="Y">10.1038/s41467-019-08965-w</ELocationID>
-                    <Abstract>
-                        <AbstractText>Taxanes are a family of natural products with a broad spectrum of anticancer activity. This activity is mediated by interaction with the taxane site of beta-tubulin, leading to microtubule stabilization and cell death. Although widely used in the treatment of breast cancer and other malignancies, existing taxane-based therapies including paclitaxel and the second-generation docetaxel are currently limited by severe adverse effects and dose-limiting toxicity. To discover taxane site modulators, we employ a computational binding site similarity screen of &gt; 14,000 drug-like pockets from PDB, revealing an unexpected similarity between the estrogen receptor and the beta-tubulin taxane binding pocket. Evaluation of nine selective estrogen receptor modulators (SERMs) via cellular and biochemical assays confirms taxane site interaction, microtubule stabilization, and cell proliferation inhibition. Our study demonstrates that SERMs can modulate microtubule assembly and raises the possibility of an estrogen receptor-independent mechanism for inhibiting cell proliferation.</AbstractText>
-                    </Abstract>
-                    <AuthorList CompleteYN="Y">
-                        <Author ValidYN="Y">
-                            <LastName>Lo</LastName>
-                            <ForeName>Yu-Chen</ForeName>
-                            <Initials>YC</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Bioengineering, Stanford University, Stanford, CA, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Cormier</LastName>
-                            <ForeName>Olga</ForeName>
-                            <Initials>O</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Biology, Stanford University, Stanford, CA, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Liu</LastName>
-                            <ForeName>Tianyun</ForeName>
-                            <Initials>T</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Bioengineering, Stanford University, Stanford, CA, USA.</Affiliation>
-                            </AffiliationInfo>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Genetics, Stanford University, Stanford, CA, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Nettles</LastName>
-                            <ForeName>Kendall W</ForeName>
-                            <Initials>KW</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Integrative Structural and Computational Biology, Scripps Research Institute, Jupiter, FL, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Katzenellenbogen</LastName>
-                            <ForeName>John A</ForeName>
-                            <Initials>JA</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Chemistry, University of Illinois-Urbana Champaign, Champaign, IL, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Stearns</LastName>
-                            <ForeName>Tim</ForeName>
-                            <Initials>T</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Biology, Stanford University, Stanford, CA, USA.</Affiliation>
-                            </AffiliationInfo>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Genetics, Stanford University, Stanford, CA, USA.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                        <Author ValidYN="Y">
-                            <LastName>Altman</LastName>
-                            <ForeName>Russ B</ForeName>
-                            <Initials>RB</Initials>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Bioengineering, Stanford University, Stanford, CA, USA. Russ.Altman@stanford.edu.</Affiliation>
-                            </AffiliationInfo>
-                            <AffiliationInfo>
-                                <Affiliation>Department of Genetics, Stanford University, Stanford, CA, USA. Russ.Altman@stanford.edu.</Affiliation>
-                            </AffiliationInfo>
-                        </Author>
-                    </AuthorList>
-                    <Language>eng</Language>
-                    <GrantList CompleteYN="Y">
-                        <Grant>
-                            <GrantID>U54 HL117798</GrantID>
-                            <Acronym>HL</Acronym>
-                            <Agency>NHLBI NIH HHS</Agency>
-                            <Country>United States</Country>
-                        </Grant>
-                        <Grant>
-                            <GrantID>R01 LM005652</GrantID>
-                            <Acronym>LM</Acronym>
-                            <Agency>NLM NIH HHS</Agency>
-                            <Country>United States</Country>
-                        </Grant>
-                        <Grant>
-                            <GrantID>R01 GM102365</GrantID>
-                            <Acronym>GM</Acronym>
-                            <Agency>NIGMS NIH HHS</Agency>
-                            <Country>United States</Country>
-                        </Grant>
-                        <Grant>
-                            <GrantID>R01 CA220284</GrantID>
-                            <Acronym>CA</Acronym>
-                            <Agency>NCI NIH HHS</Agency>
-                            <Country>United States</Country>
-                        </Grant>
-                        <Grant>
-                            <GrantID>R01 GM121424</GrantID>
-                            <Acronym>GM</Acronym>
-                            <Agency>NIGMS NIH HHS</Agency>
-                            <Country>United States</Country>
-                        </Grant>
-                        <Grant>
-                            <GrantID>S10 RR026780</GrantID>
-                            <Acronym>RR</Acronym>
-                            <Agency>NCRR NIH HHS</Agency>
-                            <Country>United States</Country>
-                        </Grant>
-                    </GrantList>
-                    <PublicationTypeList>
-                        <PublicationType UI="D016428">Journal Article</PublicationType>
-                    </PublicationTypeList>
-                    <ArticleDate DateType="Electronic">
-                        <Year>2019</Year>
-                        <Month>03</Month>
-                        <Day>04</Day>
-                    </ArticleDate>
-                </Article>
-                <MedlineJournalInfo>
-                    <Country>England</Country>
-                    <MedlineTA>Nat Commun</MedlineTA>
-                    <NlmUniqueID>101528555</NlmUniqueID>
-                    <ISSNLinking>2041-1723</ISSNLinking>
-                </MedlineJournalInfo>
-            </MedlineCitation>
-            <PubmedData>
-                <History>
-                    <PubMedPubDate PubStatus="received">
-                        <Year>2018</Year>
-                        <Month>04</Month>
-                        <Day>27</Day>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="accepted">
-                        <Year>2019</Year>
-                        <Month>01</Month>
-                        <Day>19</Day>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="entrez">
-                        <Year>2019</Year>
-                        <Month>3</Month>
-                        <Day>6</Day>
-                        <Hour>6</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="pubmed">
-                        <Year>2019</Year>
-                        <Month>3</Month>
-                        <Day>6</Day>
-                        <Hour>6</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                    <PubMedPubDate PubStatus="medline">
-                        <Year>2019</Year>
-                        <Month>3</Month>
-                        <Day>6</Day>
-                        <Hour>6</Hour>
-                        <Minute>0</Minute>
-                    </PubMedPubDate>
-                </History>
-                <PublicationStatus>epublish</PublicationStatus>
-                <ArticleIdList>
-                    <ArticleId IdType="pubmed">30833575</ArticleId>
-                    <ArticleId IdType="doi">10.1038/s41467-019-08965-w</ArticleId>
-                    <ArticleId IdType="pii">10.1038/s41467-019-08965-w</ArticleId>
-                    <ArticleId IdType="pmc">PMC6399299</ArticleId>
-                </ArticleIdList>
-            </PubmedData>
-        </PubmedArticle>
-
-        </PubmedArticleSet>
-    http_version: 
-  recorded_at: Fri, 22 Mar 2019 16:41:10 GMT
-- request:
-    method: post
     uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?api_key=Settings.PUBMED.API_KEY&db=pubmed&retmode=xml
     body:
       encoding: UTF-8
@@ -277,16 +14,22 @@ http_interactions:
       Accept-Encoding:
       - gzip,deflate
       Date:
-      - Fri, 05 Apr 2019 17:29:42 GMT
+      - Fri, 05 Apr 2019 18:08:04 GMT
       Content-Type:
       - application/x-www-form-urlencoded
+      Cookie:
+      - ncbi_sid=F7C3135D969607BB_0CA6SID
+      Content-Length:
+      - '16'
+      Host:
+      - eutils.ncbi.nlm.nih.gov
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Fri, 05 Apr 2019 17:29:42 GMT
+      - Fri, 05 Apr 2019 18:08:04 GMT
       Server:
       - Finatra
       Strict-Transport-Security:
@@ -296,13 +39,13 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9'
       Ncbi-Phid:
-      - 939B43EE851642750000200F58385B35.1.1.m_3
+      - D0BD443F3E9AC6F50000230FFC3B07B7.1.1.m_3
       Cache-Control:
       - private
       L5d-Success-Class:
       - '1.0'
       Ncbi-Sid:
-      - 419BD45899269084_D138SID
+      - F7C3135D969607BB_0CA6SID
       Content-Encoding:
       - gzip
       X-Ratelimit-Limit:
@@ -312,8 +55,8 @@ http_interactions:
       Content-Type:
       - text/xml; charset=UTF-8
       Set-Cookie:
-      - ncbi_sid=419BD45899269084_D138SID; domain=.nih.gov; path=/; expires=Sun, 05
-        Apr 2020 17:29:43 GMT
+      - ncbi_sid=F7C3135D969607BB_0CA6SID; domain=.nih.gov; path=/; expires=Sun, 05
+        Apr 2020 18:08:04 GMT
       X-Ua-Compatible:
       - IE=Edge
       X-Xss-Protection:
@@ -527,5 +270,5 @@ http_interactions:
 
         </PubmedArticleSet>
     http_version: 
-  recorded_at: Fri, 05 Apr 2019 17:29:43 GMT
+  recorded_at: Fri, 05 Apr 2019 18:08:04 GMT
 recorded_with: VCR 4.0.0
