log all_sources harvesting into own log file

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -68,6 +68,7 @@ DOI:
   BASE_URI: https://doi.org/
 
 HARVESTER:
+  LOG: log/all_sources_harvester.log
   USE_MIDDLE_NAME: true
   USE_FIRST_INITIAL: false
   USE_AUTHOR_IDENTITIES: false
