--- a/fixtures/vcr_cassettes/Pubmed_Client/_search/returns_a_smaller_list.yml
+++ b/fixtures/vcr_cassettes/Pubmed_Client/_search/returns_a_smaller_list.yml
@@ -67,6 +67,75 @@ http_interactions:
         \  <TermSet>    <Term>2019/04/05[EDAT]</Term>    <Field>EDAT</Field>    <Count>0</Count>
         \   <Explode>N</Explode>   </TermSet>   <OP>RANGE</OP>   <OP>AND</OP>  </TranslationStack><QueryTranslation>Altman
         R[Author] AND 2019/01/05[EDAT] : 2019/04/05[EDAT]</QueryTranslation>\n\n</eSearchResult>\n"
-    http_version:
+    http_version: 
   recorded_at: Fri, 05 Apr 2019 17:22:18 GMT
+- request:
+    method: post
+    uri: https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi?api_key=Settings.PUBMED.API_KEY&datetype=edat&db=pubmed&reldate=90&retmax=3000&retmode=xml
+    body:
+      encoding: UTF-8
+      string: term=Altman R[author]
+    headers:
+      User-Agent:
+      - stanford-library-sul-pub
+      Accept:
+      - "*/*"
+      Accept-Encoding:
+      - gzip,deflate
+      Date:
+      - Sun, 19 May 2019 23:33:14 GMT
+      Content-Type:
+      - application/x-www-form-urlencoded
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Sun, 19 May 2019 23:33:14 GMT
+      Server:
+      - Finatra
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+      X-Ratelimit-Remaining:
+      - '8'
+      Ncbi-Phid:
+      - D0BD42B76849BF3500001F4FF6FC03B5.1.1.m_1
+      Cache-Control:
+      - private
+      L5d-Success-Class:
+      - '1.0'
+      Ncbi-Sid:
+      - 453128B5DF98C63F_4FD5SID
+      Content-Encoding:
+      - gzip
+      X-Ratelimit-Limit:
+      - '10'
+      Access-Control-Allow-Origin:
+      - "*"
+      Content-Type:
+      - text/xml; charset=UTF-8
+      Set-Cookie:
+      - ncbi_sid=453128B5DF98C63F_4FD5SID; domain=.nih.gov; path=/; expires=Tue, 19
+        May 2020 23:33:14 GMT
+      X-Ua-Compatible:
+      - IE=Edge
+      X-Xss-Protection:
+      - 1; mode=block
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: "<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n<!DOCTYPE eSearchResult
+        PUBLIC \"-//NLM//DTD esearch 20060628//EN\" \"https://eutils.ncbi.nlm.nih.gov/eutils/dtd/20060628/esearch.dtd\">\n<eSearchResult>\n<Count>12</Count><RetMax>12</RetMax><RetStart>0</RetStart>\n<IdList>\n\t<Id>31061748</Id>\n\t<Id>31061541</Id>\n\t<Id>31051039</Id>\n\t<Id>31051019</Id>\n\t<Id>31019075</Id>\n\t<Id>30993674</Id>\n\t<Id>30950912</Id>\n\t<Id>30936730</Id>\n\t<Id>30833575</Id>\n\t<Id>30804076</Id>\n\t<Id>30804075</Id>\n\t<Id>30773618</Id>\n</IdList>\n<TranslationSet/><TranslationStack>
+        \  <TermSet>    <Term>Altman R[Author]</Term>    <Field>Author</Field>    <Count>1148</Count>
+        \   <Explode>N</Explode>   </TermSet>   <TermSet>    <Term>2019/02/18[EDAT]</Term>
+        \   <Field>EDAT</Field>    <Count>0</Count>    <Explode>N</Explode>   </TermSet>
+        \  <TermSet>    <Term>2019/05/19[EDAT]</Term>    <Field>EDAT</Field>    <Count>0</Count>
+        \   <Explode>N</Explode>   </TermSet>   <OP>RANGE</OP>   <OP>AND</OP>  </TranslationStack><QueryTranslation>Altman
+        R[Author] AND 2019/02/18[EDAT] : 2019/05/19[EDAT]</QueryTranslation>\n\n</eSearchResult>\n"
+    http_version: 
+  recorded_at: Sun, 19 May 2019 23:33:14 GMT
 recorded_with: VCR 4.0.0
