--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,11 @@ AllCops:
     - 'spec/spec_helper.rb'
     - 'vendor/**/*'
 
+# there are useful expectations of methods being called on the subject in tests
+RSpec/SubjectStub:
+  Exclude:
+    - "spec/**/*"
+
 Layout/MultilineMethodCallIndentation:
   Exclude:
     - "spec/lib/web_of_science/harvester_spec.rb" # cop doesn't get compound matchers have semantic grouping
