upgrade to bundler2

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,19 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-- 2.5.3 # deployed
+  - 2.5.3 # deployed
 services: mysql
+before_install:
+  - gem update --system
 before_script:
-- curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
-  > ./cc-test-reporter
-- chmod +x ./cc-test-reporter
-- "./cc-test-reporter before-build"
-- bundle exec rake db:create db:setup
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
+    > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - "./cc-test-reporter before-build"
+  - bundle exec rake db:create db:setup
 script: bundle exec rake ci
 after_script:
-- "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
+  - "./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT"
 env:
   global:
   - CC_TEST_REPORTER_ID=66a4c4244af78b2eaf74c47fed9bfa88560c30c2c9a4e921053f6cd7ce097677
