--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ sudo: false
 language: ruby
 cache: bundler
 rvm:
-  - 2.5.3 # deployed
+  - 2.5.3 # deployed to current servers
+  - 2.7.1 # proposed on new servers
 services: mysql
 before_install:
   - gem update --system
