--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -12,7 +12,7 @@
 # SupportedHashRocketStyles: key, separator, table
 # SupportedColonStyles: key, separator, table
 # SupportedLastArgumentHashStyles: always_inspect, always_ignore, ignore_implicit, ignore_explicit
-Layout/AlignHash:
+Layout/HashAlignment:
   Exclude:
     - 'app/controllers/publications_controller.rb'
     - 'app/models/author.rb'
@@ -31,7 +31,7 @@ Layout/AlignHash:
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle, IndentationWidth.
 # SupportedStyles: with_first_parameter, with_fixed_indentation
-Layout/AlignParameters:
+Layout/ParameterAlignment:
   Exclude:
     - 'app/models/publication.rb'
     - 'lib/web_of_science/process_records.rb'
@@ -102,7 +102,7 @@ Layout/IndentationWidth:
 
 # Offense count: 19
 # Cop supports --auto-correct.
-Layout/LeadingBlankLines:
+Layout/LeadingEmptyLines:
   Enabled: false
 
 # Offense count: 4
@@ -160,7 +160,7 @@ Layout/SpaceAfterNot:
 # Offense count: 9
 # Cop supports --auto-correct.
 # Configuration parameters: IndentationWidth.
-Layout/Tab:
+Layout/IndentationStyle:
   Exclude:
     - 'spec/lib/bibtex_ingester_spec.rb'
 
@@ -168,7 +168,7 @@ Layout/Tab:
 # Cop supports --auto-correct.
 # Configuration parameters: EnforcedStyle.
 # SupportedStyles: final_newline, final_blank_line
-Layout/TrailingBlankLines:
+Layout/TrailingEmptyLines:
   Exclude:
     - 'lib/csl/bibtex_mapper.rb'
     - 'lib/csl/mapper.rb'
@@ -230,7 +230,7 @@ Naming/MemoizedInstanceVariableName:
 # Offense count: 8
 # Configuration parameters: MinNameLength, AllowNamesEndingInNumbers, AllowedNames, ForbiddenNames.
 # AllowedNames: io, id, to, by, on, in, at, ip, db
-Naming/UncommunicativeMethodParamName:
+Naming/MethodParameterName:
   Exclude:
     - 'lib/notification_manager.rb'
     - 'lib/web_of_science/records.rb'
@@ -242,23 +242,6 @@ Naming/UncommunicativeMethodParamName:
 Naming/VariableNumber:
   Exclude:
     - 'script/fix_sw_procs_marked_as_article.rb'
-
-# Offense count: 2
-# Cop supports --auto-correct.
-Performance/InefficientHashSearch:
-  Exclude:
-    - 'spec/factories/author.rb'
-
-# Offense count: 6
-# Cop supports --auto-correct.
-Performance/RegexpMatch:
-  Exclude:
-    - 'app/models/pubmed_source_record.rb'
-    - 'lib/agent/author_name.rb'
-    - 'lib/science_wire_publication.rb'
-    - 'lib/web_of_science/query_author.rb'
-    - 'script/missing_wos_ids.rb'
-    - 'script/title_report.rb'
 
 # Offense count: 3
 RSpec/AnyInstance:
@@ -643,5 +626,5 @@ Style/WordArray:
 # Offense count: 1719
 # Configuration parameters: AllowHeredoc, AllowURI, URISchemes, IgnoreCopDirectives, IgnoredPatterns.
 # URISchemes: http, https
-Metrics/LineLength:
+Layout/LineLength:
   Max: 432
