--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,14 +41,73 @@ Layout/LineLength:
     - "spec/lib/pubmed/query_author_spec.rb"
     - "spec/lib/bibtex_ingester_spec.rb"
 
+Metrics/AbcSize:
+  Exclude:
+    - "spec/controllers/publications_controller_spec.rb"
+    - "script/*"
+
 Metrics/BlockLength:
   Exclude:
     - "spec/factories/user_submitted_source_records.rb"
     - "spec/lib/csl/citation_spec.rb"
+    - "lib/smci_report.rb"
+    - "lib/tasks/*.rake"
+    - "script/*"
+    - "spec/**/*"
+
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - "script/*"
 
 Metrics/ClassLength:
   Exclude:
     - "lib/bibtex_ingester.rb"
+    - "app/controllers/authorships_controller.rb"
+    - "app/controllers/publications_controller.rb"
+    - "app/models/author.rb"
+    - "app/models/publication.rb"
+    - "app/models/pubmed_source_record.rb"
+    - "app/models/sciencewire_source_record.rb"
+    - "lib/cap/authors_poller.rb"
+    - "lib/science_wire_publication.rb"
+    - "lib/smci_report.rb"
+    - "lib/web_of_science/identifiers.rb"
+    - "script/*"
+
+Metrics/MethodLength:
+  Exclude:
+    - "app/controllers/authorships_controller.rb"
+    - "app/controllers/publications_controller.rb"
+    - "app/models/author.rb"
+    - "app/models/publication.rb"
+    - "app/models/pubmed_source_record.rb"
+    - "app/models/sciencewire_source_record.rb"
+    - "lib/bibtex_identifiers.rb"
+    - "lib/bibtex_ingester.rb"
+    - "lib/cap/authors_poller.rb"
+    - "lib/cap/profile_id_rewriter.rb"
+    - "lib/cap/client.rb"
+    - "lib/csl/mapper.rb"
+    - "lib/csl/role_mapper.rb"
+    - "lib/harvester/base.rb"
+    - "lib/notification_manager.rb"
+    - "lib/pubmed/client.rb"
+    - "lib/pubmed/harvester.rb"
+    - "lib/smci_report.rb"
+    - "lib/web_of_science/harvester.rb"
+    - "lib/web_of_science/identifiers.rb"
+    - "lib/web_of_science/map_names.rb"
+    - "lib/web_of_science/map_pub_hash.rb"
+    - "lib/web_of_science/map_publisher.rb"
+    - "lib/web_of_science/process_pubmed.rb"
+    - "lib/web_of_science/process_records.rb"
+    - "lib/web_of_science/record.rb"
+    - "script/*"
+    - "spec/**/*"
+
+Metrics/PerceivedComplexity:
+  Exclude:
+    - "script/*"
 
 Naming/VariableName:
   Enabled: false
