--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,8 @@
 inherit_from:
   - .rubocop_todo.yml
-require: rubocop-rspec
+require:
+  - rubocop-rspec
+  - rubocop-rake
 
 AllCops:
   TargetRubyVersion: 2.7
