Adds harvester for ORCID.
refs #1268

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -105,6 +105,9 @@ Naming/VariableNumber:
     - "spec/**/*"
     - "script/**/*"
 
+RSpec/MultipleExpectations:
+  Enabled: false
+
 RSpec/NestedGroups:
   Max: 5
 
