--- a/config/settings.yml
+++ b/config/settings.yml
@@ -65,7 +65,7 @@ WOS:
   regular_harvest_timeframe: 3week # default WoS symbolicTimeSpan for regular harvests
   update_timeframe: null # default WoS symbolicTimeSpan for updated authors resulting from nightly cap polling
   new_author_timeframe: null # default WoS symbolicTimeSpan for new authors resulting from nightly cap polling (null == for all time)
-  # note, see lib/web_of_science/query_author.rb#author_query
+  # note, see lib/web_of_science/queries.rb#construct_uid_query
   #   or https://github.com/sul-dlss/sul_pub/wiki/Clarivate-APIs for allowed values of symbolicTimeSpan
   max_publications_per_author: 3000 # if more than this number of publications are returned for a single author, the author harvest will be aborted
                                     #  and a HB alert will be sent
