remove some more unneeded fixtures

--- a/fixtures/vcr_cassettes/Mais_Client/_fetch_orcid_users/raises.yml
+++ b/fixtures/vcr_cassettes/Mais_Client/_fetch_orcid_users/raises.yml
@@ -79,7 +79,7 @@ http_interactions:
       Accept:
       - "*/*"
       Authorization:
-      - Bearer oSgcXgEhRY4KjnHbRvaai4YLgce76sG2
+      - Bearer private_bearer_token
       Date:
       - Tue, 11 May 2021 22:33:00 GMT
       Host:
