--- a/config/settings.yml
+++ b/config/settings.yml
@@ -76,7 +76,7 @@ ORCID:
   CLIENT_ID: APP-FAKEJMB7RBQVFQ0D
   CLIENT_SECRET: FAKE6bb5-dba1-445d-ba10-c14745383ba0
   LOG: log/orcid.log
-  orcidid_for_check: https://orcid.org/0000-0003-1527-0030
+  orcidid_for_check: https://sandbox.orcid.org/0000-0002-7262-6251 # jtim
 
 DOI:
   BASE_URI: https://doi.org/
